# aethon

./: .dockerignore  .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  RELEASING.md  SPEC.md  eslint.config.js  flake.nix  index.html  index.mobile.html  package-lock.json  package.json  playwright.config.ts  release-please-config.json  tsconfig.app.json  tsconfig.e2e.json  tsconfig.node.json  vite.config.ts  vite.mobile.config.ts
.claude/: settings.json
.codex/: config.toml
.design-sync/: NOTES.md  config.json  conventions.md  geist-alias.css  styles-entry.css
.design-sync/previews/: AeMarkInline.tsx  AeWordmark.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Chevron.tsx  Code.tsx  ComposerVisibilityPills.tsx  Container.tsx  DatePicker.tsx  Divider.tsx  EmptyState.tsx  Form.tsx  FormField.tsx  Heading.tsx  (+11 more)
.github/: copilot-instructions.md
.impeccable/: design.json
.understand-anything/: .gitignore  .understandignore  domain-graph.json  fingerprints.json  knowledge-graph.json  meta.json
agent/: a2ui-tools.test.ts  a2ui-tools.ts  a2uiEvents.ts  active-project-cwd.test.ts  active-project-cwd.ts  activity-summary.ts  aethon-api-dashboard.test.ts  aethon-api-dashboard.ts  aethon-api-editor.test.ts  aethon-api-editor.ts  aethon-api-sessions.test.ts  aethon-api-sessions.ts  aethon-api-shells.test.ts  aethon-api-shells.ts  aethon-api-windows.test.ts  aethon-api-windows.ts  aethon-api.test.ts  aethon-api.ts  agent-errors.test.ts  agent-errors.ts  bash-tool.ts  boot-sequence.test.ts  boot-sequence.ts  boot-trace.test.ts  boot-trace.ts  canvas.test.ts  canvas.ts  chat-stop.test.ts  chat.ts  codex-fast-mode.test.ts  codex-fast-mode.ts  codex-reasoning.test.ts  codex-reasoning.ts  context-overflow-recovery.ts  context-usage.test.ts  context-usage.ts  dashboard-tools.test.ts  dashboard-tools.ts  disabled-extensions.test.ts  disabled-extensions.ts  (+86 more)
apps/mobile/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
apps/mobile/src-tauri/.cargo/: config.toml
apps/mobile/src-tauri/capabilities/: default.json  mobile.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: discovery.rs  gateway.rs  lib.rs  main.rs  pair.rs
cli/: aethonControl.test.ts  aethonControl.ts  aethonRemote.ts  aethonctl.ts  controlClient.ts  debugClient.ts  docs-dev.test.ts  mobile-css-contract.test.ts
dist-mobile/: index.mobile.html
docs/: ONBOARDING.md  mobile.md  project-config.md
e2e/: aethon.spec.ts
scripts/: aur-build-all.sh  build-agent.sh  build-updater-manifest.sh  dev.sh  docs-dev.sh  ensure-frontend-deps.sh  ios.sh  macos-dev-app-runner.sh  stage-lfm2-runner.sh  sync-version.mjs  understand-dashboard.sh  verify-bundle.sh
src/: App.tsx  NativeCanvasWindowApp.test.tsx  NativeCanvasWindowApp.tsx  agentActivity.ts  config.test.ts  config.ts  configWrites.test.ts  configWrites.ts  design-system.ts  editorTabs.test.ts  editorTabs.ts  ghBranchStatusCache.test.ts  ghBranchStatusCache.ts  ghChecksCache.test.ts  ghChecksCache.ts  ghIssuesCache.test.ts  ghIssuesCache.ts  ghRepoOverviewCache.test.ts  ghRepoOverviewCache.ts  gitFetchCache.ts  gitStatusCache.test.ts  gitStatusCache.ts  hosts.test.ts  hosts.ts  layoutPrefs.test.ts  layoutPrefs.ts  main.tsx  mainApp.tsx  nativeWindows.ts  persist.ts  projectIcons.test.ts  projectIcons.ts  projects.icons.test.ts  projects.test.ts  projects.ts  questions.test.ts  questions.ts  remoteInvoke.ts  scheduledTasks.test.ts  scheduledTasks.ts  (+20 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: PlatformSpeech.swift
src-tauri/src/: agent_commands.rs  agent_process.rs  boot_probation.rs  control.rs  debug.rs  env.rs  helpers.rs  lib.rs  logging.rs  main.rs  paste.rs  platform_speech.rs  shell.rs  storage.rs  updater_state.rs  voice.rs  window_state.rs
src-tauri/src/agent_process/: mod.rs  process.rs  readers.rs  sidecar.rs  spawn.rs  sweep.rs
src-tauri/src/boot_probation/: backup.rs  detect.rs  mod.rs  monitor.rs  report.rs  rollback.rs  schema.rs
src-tauri/src/commands/: boot.rs  config.rs  devshell.rs  extensions.rs  fs.rs  git.rs  host.rs  mcp.rs  mod.rs  native_windows.rs  remote.rs  scheduler.rs  server.rs  session.rs  setup.rs  startup.rs  subagents.rs  updater.rs  voice.rs  voice_convo.rs  window.rs
src-tauri/src/commands/extensions/: app_menu.rs  installer.rs  menu_items.rs  mod.rs  project_watch.rs  reload.rs  tray.rs  watcher.rs
src-tauri/src/commands/fs/: icons.rs  io.rs  listing.rs  mod.rs  open.rs  security.rs  trash.rs  watch.rs
src-tauri/src/commands/git/: checks.rs  common.rs  diff.rs  github.rs  issues.rs  mod.rs  picker.rs  status.rs  test_support.rs  watch.rs  worktrees.rs
src-tauri/src/commands/scheduler/: cron.rs  loop_prompt.rs  mod.rs  policy.rs  runner.rs  store.rs  types.rs
src-tauri/src/commands/startup/: approval.rs  config.rs  mod.rs  runner.rs  status.rs  tests.rs
src-tauri/src/devshell/: cache.rs  config.rs  detect.rs  mod.rs  prepare_policy.rs  resolve.rs
src-tauri/src/helpers/: config.rs  config_snapshot.rs  mod.rs  names.rs  paths.rs  secure_files.rs
src-tauri/src/platform_speech/: macos.rs  mod.rs  windows_speech.rs
src-tauri/src/server/: http.rs  mdns.rs  mod.rs  tls.rs
src-tauri/src/server/remote/: client.rs  devices.rs  events.rs  hosts.rs  integration_tests.rs  mod.rs  pairing.rs  policy.rs  protocol.rs  relay.rs  ws.rs
src-tauri/src/shell/: lifecycle.rs  mod.rs  scrollback.rs  sharemode.rs
src-tauri/src/shell/lifecycle/: io.rs  mod.rs  open.rs  reader.rs  registry.rs  sharing.rs
src-tauri/src/voice/: audio.rs  catalog.rs  deepgram.rs  download.rs  inference.rs  lfm2.rs  mel.rs  mod.rs  playback.rs  providers.rs  registry.rs  settings.rs  tests.rs  types.rs
src-tauri/src/voice/convo/: keys.rs  local.rs  mic.rs  mod.rs  stt.rs  tests.rs  tts.rs
src-tauri/src/window_state/: migration.rs  mod.rs  monitor_matching.rs  persistence.rs  restore.rs  save.rs  schema.rs
website/: index.md  knowledge-graph.md  package.json  troubleshooting.md
(+1272 files in other folders)
