[package]
name = "aethon"
version = "0.3.3"
edition = "2024"
license = "MIT"
description = "Pi with a face — agent-driven desktop shell with A2UI"
homepage = "https://github.com/utensils/aethon"
repository = "https://github.com/utensils/aethon"
authors = ["James Brink <brink.james@gmail.com>"]
keywords = ["tauri", "desktop", "agent", "a2ui", "ai"]
categories = ["gui"]

[lib]
name = "aethon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aethon"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
uuid = { version = "1.23.1", features = ["v4"] }
tokio = { version = "1.52.1", features = [
  "net",
  "io-util",
  "time",
  "sync",
  "process",
  "macros",
] }
toml = { version = "0.8", features = ["parse"] }
toml_edit = "0.22"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.7.0"
portable-pty = "0.9"
tauri-plugin-notification = "2.3.3"
trash = "5"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
mdns-sd = "0.12"
gethostname = "1"
axum = "0.7"
sha1 = "0.10"
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
  "serde",
] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.52.1", features = ["macros", "rt"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10.1"
