[package]
name = "aethon"
version = "0.11.2"
edition = "2024"
license = "MIT"
description = "Pi with a face — agent-driven desktop shell with A2UI"
homepage = "https://github.com/utensils/aethon"
repository = "https://github.com/utensils/aethon"
authors = ["James Brink <brink.james@gmail.com>"]
keywords = ["tauri", "desktop", "agent", "a2ui", "ai"]
categories = ["gui"]

[lib]
name = "aethon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aethon"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
notify = "8"
uuid = { version = "1.23.1", features = ["v4"] }
tokio = { version = "1.52.1", features = [
  "net",
  "io-util",
  "time",
  "sync",
  "fs",
  "rt",
  "process",
  "macros",
] }
toml = { version = "0.8", features = ["parse"] }
toml_edit = "0.22"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.7.0"
portable-pty = "0.9"
tauri-plugin-notification = "2.3.3"
trash = "5"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
mdns-sd = "0.12"
gethostname = "1"
axum = "0.7"
# Remote gateway TLS: ring-flavored everywhere so we stay on the crypto
# provider reqwest already links (aws-lc-rs would add a second provider
# and a cmake build dep).
axum-server = { version = "0.7", default-features = false, features = [
  "tls-rustls-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "log",
  "std",
  "tls12",
] }
rcgen = { version = "0.14", default-features = false, features = [
  "crypto",
  "pem",
  "ring",
] }
sha2 = "0.10"
sha1 = "0.10"
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
  "serde",
] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
async-trait = "0.1"
futures-util = "0.3"
parking_lot = "0.12"
cpal = { version = "0.17", optional = true }
candle-core = { version = "=0.9.2", optional = true }
candle-nn = { version = "=0.9.2", optional = true }
candle-transformers = { version = "=0.9.2", optional = true }
tokenizers = { version = "0.22", default-features = false, features = [
  "onig",
], optional = true }
rubato = { version = "2", default-features = false, optional = true }
hound = { version = "3", optional = true }
tempfile = { version = "3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "=0.9.2", features = ["metal"], optional = true }
candle-nn = { version = "=0.9.2", features = ["metal"], optional = true }
candle-transformers = { version = "=0.9.2", features = [
  "metal",
], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_Media_Audio",
  "Win32_Media_Speech",
] }

[features]
default = ["voice"]
voice = [
  "dep:cpal",
  "dep:candle-core",
  "dep:candle-nn",
  "dep:candle-transformers",
  "dep:tokenizers",
  "dep:rubato",
  "dep:hound",
  "dep:tempfile",
]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.52.1", features = ["macros", "rt"] }
tauri = { version = "2", features = ["test"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10.1"
